examples/ast-html/src/tests/corpus/snapshots/ast_html__tests__corpus__multiple_entities_in_tag_content@name.snap
---
source: src/tests/corpus/mod.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Document {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
            ],
            _range: Range {
                start_byte: 0,
                end_byte: 55,
                start_point: Point {
                    row: 0,
                    column: 0,
                },
                end_point: Point {
                    row: 0,
                    column: 55,
                },
            },
            _id: 0,
            _parent: None,
        },
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 2,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 4,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 5,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 6,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 7,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 8,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 9,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 10,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 11,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 55,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 55,
                    },
                },
                _id: 1,
                _parent: Some(
                    0,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 3,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 3,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 3,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 1,
                    end_byte: 2,
                    start_point: Point {
                        row: 0,
                        column: 1,
                    },
                    end_point: Point {
                        row: 0,
                        column: 2,
                    },
                },
                _id: 3,
                _parent: Some(
                    2,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 3,
                    end_byte: 14,
                    start_point: Point {
                        row: 0,
                        column: 3,
                    },
                    end_point: Point {
                        row: 0,
                        column: 14,
                    },
                },
                _id: 4,
                _parent: Some(
                    1,
                ),
            },
        ),
        Entity(
            Entity {
                _range: Range {
                    start_byte: 15,
                    end_byte: 21,
                    start_point: Point {
                        row: 0,
                        column: 15,
                    },
                    end_point: Point {
                        row: 0,
                        column: 21,
                    },
                },
                _id: 5,
                _parent: Some(
                    1,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 22,
                    end_byte: 27,
                    start_point: Point {
                        row: 0,
                        column: 22,
                    },
                    end_point: Point {
                        row: 0,
                        column: 27,
                    },
                },
                _id: 6,
                _parent: Some(
                    1,
                ),
            },
        ),
        Entity(
            Entity {
                _range: Range {
                    start_byte: 28,
                    end_byte: 34,
                    start_point: Point {
                        row: 0,
                        column: 28,
                    },
                    end_point: Point {
                        row: 0,
                        column: 34,
                    },
                },
                _id: 7,
                _parent: Some(
                    1,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 35,
                    end_byte: 38,
                    start_point: Point {
                        row: 0,
                        column: 35,
                    },
                    end_point: Point {
                        row: 0,
                        column: 38,
                    },
                },
                _id: 8,
                _parent: Some(
                    1,
                ),
            },
        ),
        Entity(
            Entity {
                _range: Range {
                    start_byte: 39,
                    end_byte: 45,
                    start_point: Point {
                        row: 0,
                        column: 39,
                    },
                    end_point: Point {
                        row: 0,
                        column: 45,
                    },
                },
                _id: 9,
                _parent: Some(
                    1,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 46,
                    end_byte: 51,
                    start_point: Point {
                        row: 0,
                        column: 46,
                    },
                    end_point: Point {
                        row: 0,
                        column: 51,
                    },
                },
                _id: 10,
                _parent: Some(
                    1,
                ),
            },
        ),
        EndTag(
            EndTag {
                children: AstNodeId {
                    id: 12,
                    _marker: PhantomData<ast_html::generated::TagName>,
                },
                _range: Range {
                    start_byte: 51,
                    end_byte: 55,
                    start_point: Point {
                        row: 0,
                        column: 51,
                    },
                    end_point: Point {
                        row: 0,
                        column: 55,
                    },
                },
                _id: 11,
                _parent: Some(
                    1,
                ),
            },
        ),
        TagName {
            _range: Range {
                start_byte: 53,
                end_byte: 54,
                start_point: Point {
                    row: 0,
                    column: 53,
                },
                end_point: Point {
                    row: 0,
                    column: 54,
                },
            },
            _id: 12,
            _parent: Some(
                11,
            ),
        },
    ],
}
